--- a/Rx.NET/Source/tests/Tests.System.Reactive.ApiApprovals/Tests.System.Reactive.ApiApprovals.csproj
+++ b/Rx.NET/Source/tests/Tests.System.Reactive.ApiApprovals/Tests.System.Reactive.ApiApprovals.csproj
@@ -3,8 +3,6 @@
   <PropertyGroup>
     <TargetFrameworks>net48</TargetFrameworks>
     <NoWarn>$(NoWarn);CS0618</NoWarn>
-    <ContinuousIntegrationBuild>false</ContinuousIntegrationBuild>
-    <Deterministic>false</Deterministic>
   </PropertyGroup>
 
   <ItemGroup>
@@ -28,7 +26,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
-    <PackageReference Include="Verify.Xunit" Version="1.27.0" />
+    <PackageReference Include="Verify.Xunit" Version="1.27.1-beta.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
     <PackageReference Include="DiffPlex" Version="1.5.0" />
