--- a/azure-pipelines.ix.yml
+++ b/azure-pipelines.ix.yml
@@ -32,11 +32,11 @@ stages:
   jobs:
   - job: Build
     steps:
-    - task: DotNetCoreInstaller@0
+    - task: UseDotNet@2
+      displayName: Use .NET Core 3.1.x SDK
       inputs:
-        version: '3.1.300-preview-015048'
+        version: 3.1.x
         performMultiLevelLookup: true
-        includePreviewVersions: true
 
     - task: DotNetCoreCLI@2
       inputs:
