Update to accomondate new generated attribute

--- a/Rx.NET/Source/tests/Tests.System.Reactive.ApiApprovals/Tests.System.Reactive.ApiApprovals.csproj
+++ b/Rx.NET/Source/tests/Tests.System.Reactive.ApiApprovals/Tests.System.Reactive.ApiApprovals.csproj
@@ -8,8 +8,8 @@
   <ItemGroup>
     <Compile Remove="Api\*.verified.cs" />
     <Compile Remove="Api\*.received.cs" />
-    <None Include="Api\*.verified.cs" />
-    <None Include="Api\*.received.cs" />
+    <None Include="Api\*.verified.cs" Visible="true" />
+    <None Include="Api\*.received.cs" Visible="true" />
   </ItemGroup>
 
   <ItemGroup>
