--- a/azure-pipelines.rx.yml
+++ b/azure-pipelines.rx.yml
@@ -50,13 +50,13 @@ stages:
     - script: nbgv cloud -a -p Rx.NET/Source
       displayName: Set Version
 
-    - task: DotNetCoreCLI@2
+    - task: MSBuild@1
       displayName: Build System.Reactive.sln
       inputs:
-        command: build
-        projects: Rx.NET/Source/System.Reactive.sln
-        arguments: -c $(BuildConfiguration) /p:CreatePackage=true /p:NoPackageAnalysis=true /p:PackageOutputPath=$(Build.ArtifactStagingDirectory)\artifacts
-        
+        solution: Rx.NET/Source/System.Reactive.sln
+        msbuildArguments: /restore /t:build /p:CreatePackage=true /p:NoPackageAnalysis=true /p:PackageOutputPath=$(Build.ArtifactStagingDirectory)\artifacts
+        configuration: $(BuildConfiguration)
+        maximumCpuCount: false
 
     - task: NuGetCommand@2
       displayName: Pack compatibility package
