--- a/Rx.NET/Source/src/System.Reactive/System.Reactive.csproj
+++ b/Rx.NET/Source/src/System.Reactive/System.Reactive.csproj
@@ -63,6 +63,16 @@
 
   <!-- Designer support -->
   <ItemGroup>
+    <Compile Update="Joins\Pattern.Generated.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Pattern.tt</DependentUpon>
+    </Compile>
+    <Compile Update="Joins\QueryablePattern.Generated.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>QueryablePattern.tt</DependentUpon>
+    </Compile>
     <Compile Update="Linq\Observable\CombineLatest.Generated.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
@@ -94,6 +104,14 @@
       <DependentUpon>QueryLanguage.Multiple.Zip.tt</DependentUpon>
     </Compile>
 
+    <None Update="Joins\Pattern.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>Pattern.Generated.cs</LastGenOutput>
+    </None>
+    <None Update="Joins\QueryablePattern.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>QueryablePattern.Generated.cs</LastGenOutput>
+    </None>
     <None Update="Linq\Observable\CombineLatest.Generated.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>CombineLatest.Generated.cs</LastGenOutput>
