use the pool with 2019 preview on it

--- a/azure-pipelines.rx.yml
+++ b/azure-pipelines.rx.yml
@@ -24,8 +24,7 @@ stages:
 - stage: Build
   jobs:
   - job: Build
-    pool:
-      vmImage: windows-latest
+    pool: vs2019-preview
 
     variables:
       BuildConfiguration: Release
