--- a/azure-pipelines.rx.yml
+++ b/azure-pipelines.rx.yml
@@ -106,10 +106,11 @@ stages:
       artifact: ApprovalsTests
       condition: always()
 
+- stage: Test
+  jobs:
   - job: Integration_Linux_Tests
-    dependsOn: Build
     pool:
-      vmImage: ubuntu-16.04
+      vmImage: ubuntu-latest
 
     variables:
       BuildConfiguration: Release
@@ -193,8 +194,7 @@ stages:
         arguments: -c $(BuildConfiguration) --filter "SkipCI!=true" -f netcoreapp2.1 /p:TargetFrameworks=netcoreapp2.1
       displayName: Run 2.1 Tests on Linux
 
-  - job: Integration_WindowsDesktop_Tests
-    dependsOn: Build
+  - job: Integration_WindowsDesktop_Tests    
     pool:
       vmImage: windows-latest
 
@@ -258,7 +258,7 @@ stages:
       displayName: Run Tests on Window Desktop
 
 - stage: CodeSign
-  condition: and(succeeded('Build'), not(eq(variables['build.reason'], 'PullRequest')))
+  condition: and(succeeded('Test'), not(eq(variables['build.reason'], 'PullRequest')))
   jobs:
   - deployment: CodeSign
     displayName: Code Signing
