ensure 3.1 runtime is present

--- a/azure-pipelines.ix.yml
+++ b/azure-pipelines.ix.yml
@@ -37,6 +37,11 @@ stages:
         version: 5.0.x
         includePreviewVersions: true
 
+    - task: UseDotNet@2
+      inputs:
+        version: '3.1.x'
+        packageType: runtime
+
     - task: DotNetCoreCLI@2
       inputs:
         command: custom
