--- a/azure-pipelines.ix.yml
+++ b/azure-pipelines.ix.yml
@@ -56,7 +56,7 @@ stages:
         arguments: install --tool-path . nbgv
       displayName: Install NBGV tool
 
-    - script: nbgv cloud -p Ix.NET\Source
+    - script: nbgv cloud -p Ix.NET/Source
       displayName: Set Version
 
     - task: DotNetCoreCLI@2
